[gd_scene load_steps=3 format=3 uid="uid://ca2tufigxfrxw"]

[ext_resource type="Script" path="res://UI/Components/user_interface.gd" id="1_jnhys"]
[ext_resource type="PackedScene" uid="uid://bxwxiwfi1i27r" path="res://UI/Components/linear_progress_bar.tscn" id="1_ufwrw"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jnhys")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 10.0
offset_bottom = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MassContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MassContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Mass: "

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/MassContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 10
text = "1000"

[node name="LinearProgressBar" parent="PanelContainer/VBoxContainer/MassContainer" instance=ExtResource("1_ufwrw")]
visible = false
layout_mode = 2

[node name="OrbitContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/OrbitContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Orbit: "

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/OrbitContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 10
text = "1000"

[node name="SpeedContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/SpeedContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Speed: "

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 10
text = "500
"

[node name="ScoreContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Score: "

[node name="Value" type="Label" parent="PanelContainer/VBoxContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 10
text = "0"
